--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,19 @@
         
             <div id="payment">
                 <h3><span class="side_heading">3. </span>Payment</h3>
-                <button>Pay</button>
+                <div id="payment_options">
+                    <div>
+                        <h4><i class="fas fa-money-bill" style="color: green;"> </i>
+                            Credit/Debit Cards</h4>
+                        <h4 class="side_heading"><i class="fas fa-money-bill" style="color: green;"> </i> Wallet</h4>
+                        <h4 class="side_heading"><i class="fas fa-money-bill" style="color: green;"> </i> UPI</h4>
+                        <h4 class="side_heading"><i class="fas fa-money-bill" style="color: green;"> </i> COD</h4>
+                    </div>
+                    <div>
+                        <br>
+                        <a href="payment.html" style="background-color: white;">Pay via Card</a>
+                    </div>
+                </div>
             </div>            
         </div>
         <div id="order_summary">
