--- a/footer.html
+++ b/footer.html
@@ -49,7 +49,7 @@
       }
       #f5 {
         display: flex;
-        gap: 25%;
+        gap: 29%;
         font-size: 20px;
         margin-top: 2%;
       }
@@ -133,13 +133,15 @@
         </div>
         <div>
           <p style="font-size: 22px; color: rgb(196, 196, 196)">Contact</p>
-          <p>
-            <img
-              style="width: 25px; height: 25px; margin-top: 2%"
-              src="https://cdn-icons-png.flaticon.com/128/526/526901.png"
-            />
-            &nbsp crm@fassos.com
-          </p>
+          <div style="display: flex; gap: 2%">
+            <div>
+              <img
+                style="width: 25px; height: 25px; margin-top: 2%"
+                src="https://cdn-icons-png.flaticon.com/128/526/526901.png"
+              />
+            </div>
+            <div style="padding-top: 2%">crm@faasos.com</div>
+          </div>
         </div>
       </div>
 
@@ -147,22 +149,24 @@
 
       <div id="f5">
         <div id="f51"><p>2020 @ Faasos. All rights reserved</p></div>
-        <div>
-          <p id="f52">
-            Follow us on &nbsp
-            <img
-              id="img1"
-              src="https://cdn-icons-png.flaticon.com/128/49/49354.png"
-            />
-            <img
-              id="img2"
-              src="https://cdn-icons.flaticon.com/png/128/2168/premium/2168336.png?token=exp=1639560403~hmac=c55d18d92107a4643d0d8428a43f74ad"
-            />
-            <img
-              id="img3"
-              src="https://cdn-icons-png.flaticon.com/128/1384/1384015.png"
-            />
-          </p>
+        <div style="display: flex; margin-top: -1%">
+          <div style="color: grey; padding-top: 13%">Follow us on &nbsp</div>
+          <div>
+            <p id="f52">
+              <img
+                id="img1"
+                src="https://cdn-icons-png.flaticon.com/128/49/49354.png"
+              />
+              <img
+                id="img2"
+                src="https://cdn-icons.flaticon.com/png/128/2168/premium/2168336.png?token=exp=1639560403~hmac=c55d18d92107a4643d0d8428a43f74ad"
+              />
+              <img
+                id="img3"
+                src="https://cdn-icons-png.flaticon.com/128/1384/1384015.png"
+              />
+            </p>
+          </div>
         </div>
       </div>
     </div>
