--- a/footer.html
+++ b/footer.html
@@ -159,8 +159,7 @@
               />
               <img
                 id="img2"
-                src="https://cdn-icons.flaticon.com/png/128/2168/premium/2168336.png?token=exp=1639560403~hmac=c55d18d92107a4643d0d8428a43f74ad"
-              />
+        src="https://cdn-icons.flaticon.com/png/128/2168/premium/2168336.png?token=exp=1639721039~hmac=ead6d0779b7fd7f7971a9990f07215c5" />
               <img
                 id="img3"
                 src="https://cdn-icons-png.flaticon.com/128/1384/1384015.png"
