--- a/food.html
+++ b/food.html
@@ -7,8 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./styles/food.css" />
     <script src="./scripts/food.js"></script>
+
+    <!-- nav bar -->
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script type="module" src="./scripts/navbarScript.js"></script>
   </head>
   <body>
+    <div id="navbar-container"></div>
     <div id="top">
       <span style="color: grey">Home /</span>
       <span style="color: grey">Collections /</span>
