--- a/food.html
+++ b/food.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script type="module" src="./scripts/navbarScript.js"></script>
+
+    <!-- footer -->
+    <link rel="stylesheet" href="./styles/footeer.css">
+    <script type="module" src="./scripts/footer.js"></script>
   </head>
   <body>
     <div id="navbar-container"></div>
@@ -149,6 +153,8 @@
     </div>
      <br><br><br><br>
     <button id="proceedToCheckout">PROCEED TO CHECKOUT</button>
+    <br><br>
+    <div id="mainFooter"></div>
   </body>
 </html>
 
