--- a/checkout.html
+++ b/checkout.html
@@ -12,12 +12,30 @@
     <link rel="stylesheet" type="text/css" href="./styles/login&signup.css" />
     <link rel="stylesheet" type="text/css" href="./styles/addAddress.css" />   
     <link rel="stylesheet" type="text/css" href="./styles/checkout.css" />
+    <script type="module" src="./scripts/checkout.js"></script>
+
+     <!-- footer -->
+    <link rel="stylesheet" href="./styles/footeer.css">
+    <script type="module" src="./scripts/footer.js"></script>
+
+     <!-- nav bar -->
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script type="module" src="./scripts/navbarScript.js"></script>
+
+    <!-- order summary -->
+    <script src="./components/orderSummary.js"></script>
 </head>
 <body>
+    <div id="navbar-container"></div>
     <div id="checkout">
         <div id="left_checkout">            
             <div id="account_notLogin">
-                <h3><span class="side_heading">1. </span> Account </h3>
+                <h2><span class="side_heading">1. </span> Account </h2>
                 <p>To place your order now, log in to your existing account or sign up.</p>
                 <button id="login"><p class="side_heading">have an account</p><h3>LOG IN</h3></button>
                 <button id="signup"><p class="side_heading">New to Fasos?</p><h3>SIGN UP</h3></button>
@@ -43,6 +61,9 @@
         
             <div id="payment">
                 <h3><span class="side_heading">3. </span>Payment</h3>
+                <div id="payment_choose">
+                    <button>PAY</button>
+                </div>
                 <div id="payment_options">
                     <div>
                         <h4><i class="fas fa-money-bill" style="color: green;"> </i>
@@ -53,7 +74,7 @@
                     </div>
                     <div>
                         <br>
-                        <a href="payment.html" style="background-color: white;">Pay via Card</a>
+                        <a href="Payment.html" style="background-color: white;">Pay via Card</a>
                     </div>
                 </div>
             </div>            
@@ -71,7 +92,7 @@
                 </table>
             </div>
             <div>
-                coupoun
+                <input placeholder="Enter coupon" id="coupon">
             </div>
             <div id="total">
                 <h4 class="side_heading">Cart Amount</h4>
@@ -88,6 +109,6 @@
     <div id="blur"></div>
     <div id="login_pop"></div>
     <div id="signup_pop"></div>
+    <div id="mainFooter"></div>
 </body>
 </html>
-<script type="module" src="./scripts/checkout.js"></script>
