--- a/food.html
+++ b/food.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./styles/food.css" />
-    <script src="./scripts/food.js"></script>
-
+    
     <!-- nav bar -->
     <link rel="stylesheet" href="./styles/navbar.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,15 +26,12 @@
     <div id="top">
       <span style="color: grey">Home /</span>
       <span style="color: grey">Collections /</span>
-      <span>Smokey Fab Combo Veg</span>
+      <span if="food_name">Smokey Fab Combo Veg</span>
     </div>
 
     <div id="content">
       <div id="img">
-        <img
-          style="width: 100%; height: 100%"
-          src="https://product-assets.faasos.io/production/product/image_1618580131789_image_1618219032186_Fab%20%26%20Smokey%20Veg%20Combo%201%20Masala%20Paneer%20tikka%2B%201%20Jumbo%20Falafel%20Salsa%20Wrap.jpg"
-        />
+        <img style="width: 100%; height: 100%" src="https://product-assets.faasos.io/production/product/image_1618580131789_image_1618219032186_Fab%20%26%20Smokey%20Veg%20Combo%201%20Masala%20Paneer%20tikka%2B%201%20Jumbo%20Falafel%20Salsa%20Wrap.jpg"/>
       </div>
 
       <div id="rightside">
@@ -158,4 +154,6 @@
     <div id="mainFooter"></div>
   </body>
 </html>
+<script src="./scripts/food.js"></script>
+
 
