--- a/Home.html
+++ b/Home.html
@@ -66,7 +66,7 @@
                     <p style="margin-left: 13px;">By creating an account, I accept the <span>Terms & Conditions</span></p>
             
                     <div class="loginSignupSwitch">
-                        Already have an account? <span onclick="popUpLogin()" style="cursor: pointer;" id="openLoginUp">Log in</span>
+                        Already have an account? <span style="cursor: pointer;" id="openLoginUp">Log in</span>
                     </div>
                 </div>
             </div>
@@ -77,8 +77,8 @@
                     <div id="main">
                         <img style="height: 72px;" src="https://assets.faasos.io/faasos_v2/faasosLogoBrand.svg">
                         <div>
-                            <button id="login" onclick="popUpLogin()">Login</button>
-                            <button id="signUp" onclick="popUpSignup()">Sign Up</button>
+                            <button id="login">Login</button>
+                            <button id="signUp">Sign Up</button>
                         </div>
                     </div>
                     <h1 class="clear h1">Surprises under wraps</h1>
