--- a/food.html
+++ b/food.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./styles/food.css" />
     
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- nav bar -->
     <link rel="stylesheet" href="./styles/navbar.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,21 +43,22 @@
             <div id="f2">
               <div>
                 <img
-                  style="height: 19px"
+                  style="height: 19px;margin-top: 80px;"
                   src="https://img.icons8.com/color/2x/vegetarian-food-symbol.png"
                 />
               </div>
-              <div style="color: grey">₹198</div>
+              <div style="color: grey;margin-top: 80px;">₹198</div>
             </div>
           </div>
           <div id="second">
             <div id="s1">
               <div id="s">
                 <div style="padding-top: 10%">
-                  <img
+                  <!-- <img
                     style="height: 12px; margin-left: 40%"
                     src="https://img.icons8.com/fluency-systems-regular/2x/star.png"
-                  />
+                  /> -->
+                  <i class="fa fa-star"></i>
                 </div>
                 <div
                   style="
@@ -95,6 +98,7 @@
                     font-size: 10px;
                     line-height: 0%;
                     color: grey;
+                    margin-top: 8px;
                   "
                 >
                   Customizable
