--- a/food.html
+++ b/food.html
@@ -40,12 +40,12 @@
             <div id="f1" style="margin-left: 3%">Smokey Fab Combo (Veg)</div>
             <div id="f2">
               <div>
-                <img
-                  style="height: 19px"
+                <img 
+                  style="height: 19px;margin-top:25px"
                   src="https://img.icons8.com/color/2x/vegetarian-food-symbol.png"
                 />
               </div>
-              <div style="color: grey">₹198</div>
+              <div style="color: grey;margin-top: 25px">₹198</div>
             </div>
           </div>
           <div id="second">
