--- a/Home.html
+++ b/Home.html
@@ -87,7 +87,7 @@
                     <img style="width: 100%; height: 580px; border-radius: 0% 0% 0% 5%;" src="https://assets.faasos.io/faasos_v2/faasos-hero-banner.jpg">
                 </div>
                 <div id="location">
-                    <input type="text" placeholder="Enter your deliery location">
+                    <input type="text" placeholder="Enter your delivery location">
                     <p style="background: white; padding: 20px;"><img style="margin-right: 5px;" class="floatL" src="./images/location.svg"> Locate Me</p>
                     <p onclick="window.location.href='collection.html'"
                         style="background: rgb(255, 211, 68); padding: 20px; border-radius: 0px 5px 5px 0px; font-weight: 900;">
