--- a/collection.html
+++ b/collection.html
@@ -166,7 +166,7 @@
                                     </div>
                                     <div id="rupee">₹ 100</div>
                                 </div>
-                                <button id="dom2check">CHECKOUT</button>
+                                <button id="dom2check" onclick="window.location.href='checkout.html'">CHECKOUT</button>
                             </div>
                         </div>
                     </div>
