--- a/food.html
+++ b/food.html
@@ -41,21 +41,22 @@
             <div id="f2">
               <div>
                 <img 
-                  style="height: 19px;margin-top:25px"
+                  style="height: 19px;margin-top:80px"
                   src="https://img.icons8.com/color/2x/vegetarian-food-symbol.png"
                 />
               </div>
-              <div style="color: grey;margin-top: 25px">₹198</div>
+              <div style="color: grey;margin-top:80px;">₹198</div>
             </div>
           </div>
           <div id="second">
             <div id="s1">
               <div id="s">
                 <div style="padding-top: 10%">
-                  <img
+                  <!-- <img
                     style="height: 12px; margin-left: 40%"
                     src="https://img.icons8.com/fluency-systems-regular/2x/star.png"
-                  />
+                  /> -->
+                  <i class="fa fa-star"></i>
                 </div>
                 <div
                   style="
@@ -95,6 +96,7 @@
                     font-size: 10px;
                     line-height: 0%;
                     color: grey;
+                    margin-top: 8px;
                   "
                 >
                   Customizable
